--- a/demo.html
+++ b/demo.html
@@ -1,95 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <title>Your Page Title</title>
+    <title>Document</title>
+
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy8B+U0L2CA+iSgFAF/hzP0mpTKtJ5e2x" crossorigin="anonymous">
+
+    <!-- jQuery and Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-fpU2NhBhVlYYMGivNhLu7Dthfu9PyZltR5IbO4z2NqI3gBjwCIbFfgXD/EHPhzQl"
+        crossorigin="anonymous"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy8B+U0L2CA+iSgFAF/hzP0mpTKtJ5e2x"
+        crossorigin="anonymous"></script>
+
+
 </head>
+
 <body>
 
-<!-- Main Menu -->
-<nav class="main-menu style2 navbar-expand-md navbar-light">
-  <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
-      <ul class="navigation clearfix">
-          <li class=""><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="#">Company</a>
-              <ul>
-                  <li><a href="about.html">About Us</a></li>
-                  <li><a href="team.html">Meet Our Team</a></li>
-                  <li class="dropdown"><a href="#">Projects</a>
-                      <ul>
-                          <li><a href="projects.html">2 Columns Grid</a></li>
-                          <li><a href="projects-2.html">3 Columns Grid</a>
-                          <li><a href="projects-3.html">3 Columns With
-                                  Title</a>
-                          <li><a href="projects-4.html">4 Columns Wide</a>
-                          <li><a href="projects-5.html">Masonry View</a>
-                      </ul>
-                  </li>
-                  <li><a href="faq.html">FAQ’s</a></li>
-                  <li><a href="coming-soon.html">Coming soon</a></li>
-                  <li><a href="testimonials.html">Testimonials</a></li>
-                  <li><a href="error.html">404 Error page</a></li>
-              </ul>
-          </li>
-          <li class="dropdown"><a href="services.html">Services</a>
-              <ul>
-                  <li class="dropdown"><a href="#">Education</a>
-                      <ul>
-                          <li class="dropdown"><a href="study.html">Study</a>
-                              <!-- <ul>
-                              <li><a href="">ravi</a></li>
-                          </ul> -->
-                          </li>
-                          <li class="dropdown"><a href="training.html">Trainning</a>
-                          </li>
-                      </ul>
-                  </li>
-                  <li class="dropdown"><a href="service-details.html">Visa</a>
-                      <ul>
-                          <li><a href="education-visa.html">Education Visa</a></li>
-                          <li><a href="business-visa.html">Business Visa</a></li>
-                          <li><a href="touriest-visa.html">Vist & Touriest Visa</a>
-                          </li>
-                      </ul>
-                  </li>
-                  <li class="dropdown"><a href="service-details.html">Tours &
-                          Travells</a>
-                      <ul>
-                          <li><a href="thailand.html">Thailand &nbsp;<sup><img
-                                          src="assets/images/resources/newa.gif"
-                                          alt=""></sup></a></li>
-                          <li><a href="#">Dubai &nbsp;<sup><small
-                                          style="color: blue;">coming-soon</small></sup></a>
-                          </li>
-                          <li><a href="#">Malaysia &nbsp;<sup><small
-                                          style="color: blue;">coming-soon</small></sup></a>
-                          </li>
-                          <li><a href="#">Singapore &nbsp;<sup><small
-                                          style="color: blue;">coming-soon</small></sup></a>
-                          </li>
-                      </ul>
-                  </li>
-              </ul>
-          </li>
-          <li class="dropdown"><a href="#">Blog</a>
-              <ul>
-                  <li><a href="blog.html">Grid View</a></li>
-                  <li><a href="blog-2.html">List View</a></li>
-                  <li><a href="blog-3.html">Large Image</a></li>
-                  <li><a href="blog-single.html">Single Post</a></li>
-              </ul>
-          </li>
+    <!-- Navbar Start -->
+    <div class="container-fluid">
+        <div class="row border-top px-xl-5">
+            <div class="col-lg-9">
+                <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
+                    <a href="" class="text-decoration-none d-block d-lg-none">
+                        <h1 class="m-0"><span class="text-primary">E</span>COURSES</h1>
+                    </a>
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                        <div class="navbar-nav py-0">
+                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="about.html" class="nav-item nav-link">About</a>
 
-          <li><a href="contact.html">Contact</a></li>
-      </ul>
-  </div>
-</nav>
-<!-- Main Menu End-->
+                            <!-- Services with nested dropdown -->
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a>
+                                <div class="dropdown-menu rounded-0 m-0">
+                                    <!-- Dropdown items go here -->
+                                    <div class="dropdown">
+                                        <a href="#" class="dropdown-item dropdown-toggle" data-toggle="dropdown">Course 1</a>
+                                        <div
+                                            class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
+                                            <a href="#" class="dropdown-item">Sub-Menu 1</a>
+                                            <a href="#" class="dropdown-item">Sub-Menu 2</a>
+                                        </div>
+                                    </div>
+                                    <a href="#" class="dropdown-item">Course 2</a>
+                                    <a href="#" class="dropdown-item">Course 3</a>
+                                </div>
+                            </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Blog</a>
+                                <div class="dropdown-menu rounded-0 m-0">
+                                    <a href="blog.html" class="dropdown-item">Blog Grid</a>
+                                    <a href="single.html" class="dropdown-item active">Blog Detail</a>
+                                </div>
+                            </div>
+
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Contact Javascript File -->
+    <script src="mail/jqBootstrapValidation.min.js"></script>
+    <script src="mail/contact.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.dropdown-toggle').dropdown();
+        });
+    </script>
+
+<script>
+    jQuery(document).ready(function(){
+        jQuery('.dropdown-toggle').dropdown();
+    });
+</script>
 
 </body>
+
 </html>
