--- a/index.html
+++ b/index.html
@@ -23,6 +23,44 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy8B+U0L2CA+iSgFAF/hzP0mpTKtJ5e2x" crossorigin="anonymous">
+
+    <!-- jQuery and Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-fpU2NhBhVlYYMGivNhLu7Dthfu9PyZltR5IbO4z2NqI3gBjwCIbFfgXD/EHPhzQl"
+        crossorigin="anonymous"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy8B+U0L2CA+iSgFAF/hzP0mpTKtJ5e2x"
+        crossorigin="anonymous"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.6.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+        integrity="sha384-o3Fu9/ZyUnzm7MKpYv2/WaHfajX5l7Pq0FJ5i59fG27pG2YI/1aAsjFVOL8yCea"
+        crossorigin="anonymous"></script>
+
+    <!-- Popper.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"
+        integrity="sha384-3IqzI61JSzoUY2VNp+et5Gf2b3uB8n1J7q8CAH4MW/s3iZ8x3C5kYYOd83AuVE8C"
+        crossorigin="anonymous"></script>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.6.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -69,51 +107,107 @@
 
     <!-- Navbar Start -->
     <div class="container-fluid">
-        <div class="row border-top px-xl-5 justify-content-center">
+        <div class="row border-top px-xl-5">
+            <div class="col-lg-3 d-none d-lg-block">
+                <a class="d-flex align-items-center justify-content-between bg-secondary w-100 text-decoration-none"
+                    data-toggle="collapse" href="#navbar-vertical" style="height: 67px; padding: 0 30px;">
+                    <h5 class="text-primary m-0"><i class="fa fa-book-open mr-2"></i>Subjects</h5>
+                    <i class="fa fa-angle-down text-primary"></i>
+                </a>
+                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light"
+                    id="navbar-vertical" style="width: calc(100% - 30px); z-index: 9;">
+                    <div class="navbar-nav w-100">
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link" data-toggle="dropdown">Education<i
+                                    class="fa fa-angle-down float-right mt-1"></i></a>
+                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                                <a href="" class="dropdown-item">Study</a>
+                                <a href="" class="dropdown-item">Training</a>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link" data-toggle="dropdown">Visa<i
+                                    class="fa fa-angle-down float-right mt-1"></i></a>
+                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                                <a href="" class="dropdown-item">Visit & Tourist Visa</a>
+                                <a href="" class="dropdown-item">Work Visa</a>
+                                <a href="" class="dropdown-item">Business Visa</a>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link" data-toggle="dropdown">Tours & Travells<i
+                                    class="fa fa-angle-down float-right mt-1"></i></a>
+                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                                <a href="" class="dropdown-item">Thailand</a>
+                                <a href="" class="dropdown-item">Singapoor</a>
 
-            <div class="col-lg-5">
+                            </div>
+                        </div>
+                        <a href="" class="nav-item nav-link">Apps Design</a>
+
+                    </div>
+                </nav>
+            </div>
+            <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
-
+                    <!-- <a href="" class="text-decoration-none d-block d-lg-none">
+                        <h1 class="m-0"><span class="text-primary">E</span>COURSES</h1>
+                    </a> -->
+                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav py-0">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-
                             <div class="nav-item dropdown">
-                                <a href="services.html" class="nav-link dropdown-toggle"
-                                    data-toggle="dropdown">Services</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <!-- <div class="nav-item dropdown"> -->
-                                    <a href="#" class="dropdown-item" data-toggle="dropdown">Education</a>
-                                    <div class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                        <a href="#" class="dropdown-item">Study</a>
-                                        <a href="#" class="dropdown-item">Training</a>
-                                    </div>
-                                    <!-- </div> -->
-                                    
-                                        <a href="#" class="dropdown-item" data-toggle="dropdown">Visas</a>
-                                        <div class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="study.html" class="dropdown-item">Visit& Tourst Visa</a>
-                                            <a href="training.html" class="dropdown-item">Work & Residence Visa</a>
-                                            <a href="training.html" class="dropdown-item">Business Visa</a>
+                                    <!-- Education dropdown -->
+                                    <div class="nav-item dropdown">
+                                        <a href="#" class="dropdown-item" data-toggle="dropdown">Education<i
+                                                class="fa fa-angle-down float-right mt-1"></i></a>
+                                        <div class="dropdown-item position-relative bg-secondary rounded-0 w-100 m-0">
+                                            <a href="#" class="dropdown-item">Study</a>
+                                            <a href="#" class="dropdown-item">Training</a>
                                         </div>
-                                    
-                                    <a href="#" class="dropdown-item">Tours & Travells</a>
+                                    </div>
+
+                                    <!-- Visa dropdown -->
+                                    <div class="nav-item dropdown">
+                                        <a href="#" class="dropdown-item" data-toggle="dropdown">Visa<i
+                                                class="fa fa-angle-down float-right mt-1"></i></a>
+                                        <div
+                                            class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
+                                            <a href="" class="dropdown-item">Visit & Tourist Visa</a>
+                                            <a href="" class="dropdown-item">Work Visa</a>
+                                            <a href="" class="dropdown-item">Business Visa</a>
+                                        </div>
+                                    </div>
+
+                                    <!-- Tours & Travells -->
+                                    <div class="nav-item dropdown">
+                                        <a href="#" class="dropdown-item" data-toggle="dropdown">Tour & Travells<i
+                                                class="fa fa-angle-down float-right mt-1"></i></a>
+                                        <div
+                                            class="dropdown-item position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                                            <a href="" class="dropdown-item">Thailand</a>
+                                            <a href="" class="dropdown-item">Singapoor</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="blog.html" class="dropdown-item">Blog List</a>
+                                    <a href="blog.html" class="dropdown-item">Blog Grid</a>
                                     <a href="single.html" class="dropdown-item">Blog Detail</a>
                                 </div>
                             </div>
-
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
-
                     </div>
+
                 </nav>
             </div>
         </div>
@@ -708,6 +802,16 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('.dropdown-toggle').dropdown();
+        });
+    </script>
+
 </body>
 
 </html>
